# kadalamittai

./: readme.md
app/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
app/shopify-backend/: pyproject.toml
app/shopify-backend/app/: main.py
app/shopify-backend/app/routers/: cart.py  orders.py  products.py  users.py
app/shopify-frontend/: .env  index.html  package-lock.json  package.json
app/shopify-frontend/src/: App.tsx
app/shopify-frontend/src/components/: Layout.tsx
app/shopify-frontend/src/components/ui/: use-toast.ts
app/shopify-frontend/src/contexts/: AuthContext.tsx  CartContext.tsx
app/shopify-frontend/src/lib/: api.ts  utils.ts
app/shopify-frontend/src/pages/: CartPage.tsx  CheckoutPage.tsx  HomePage.tsx  LoginPage.tsx  OrderDetailPage.tsx  OrdersPage.tsx  ProductPage.tsx  RegisterPage.tsx
app/shopify-frontend/src/pages/admin/: DashboardPage.tsx  OrdersPage.tsx  ProductsPage.tsx
app/shopify-frontend/src/types/: index.ts
